# Arc-ZARDIAN

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  quick_test.py  requirements.txt  test_rpc_endpoints.py  test_transaction.py
docs/: ai_prompting_examples.md  arc_zardian_guide.md  copilot_instructions.md  current_status.md  getting_started.md  implementation_roadmap.md  quick_reference.md  testing_transactions.md
src/arc_zardian/: __init__.py  app.py  cli.py  config.py
src/arc_zardian/api/: arc_client.py
src/arc_zardian/core/: __init__.py  models.py  optimizer.py
tests/: test_config.py
tests/test_core/: test_optimizer.py
tests/test_presentation/: test_app.py
